// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TeamCard.vue - Snapshot Tests (Before Refactoring) > should match snapshot - basic card render (closed modal) 1`] = `
"<div data-v-58b3eafb="" class="team-card">
  <!-- 主要卡片內容 -->
  <div data-v-58b3eafb="" class="flex items-center gap-4 flex-1">
    <div data-v-58b3eafb="" class="team-avatar">
      <div data-v-58b3eafb="" class="text-white font-bold text-[1.375rem] uppercase" style="text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);">測</div>
    </div>
    <div data-v-58b3eafb="" class="flex-1 min-w-0">
      <h3 data-v-58b3eafb="" class="m-0 mb-1.5 text-gray-800 text-[1.375rem] font-bold whitespace-nowrap overflow-hidden text-ellipsis">測試團隊</h3>
      <p data-v-58b3eafb="" class="m-0 mb-3 text-gray-500 text-base leading-normal whitespace-nowrap overflow-hidden text-ellipsis">這是一個測試團隊的描述</p>
      <div data-v-58b3eafb="" class="flex items-center gap-3 flex-wrap"><span data-v-58b3eafb="" class="status active">活躍</span><span data-v-58b3eafb="" class="text-gray-500 text-sm font-medium py-1.5 px-3 bg-gray-200 rounded-xl">5 成員 </span></div>
    </div>
  </div><!-- 操作按鈕區 -->
  <div data-v-58b3eafb="" class="flex gap-2 items-center flex-shrink-0 flex-wrap"><button data-v-58b3eafb="" class="btn btn-danger">停用</button><button data-v-58b3eafb="" class="btn btn-danger"> 刪除團隊 </button></div>
</div>
<!-- 團隊詳情 Modal -->
<modal-stub data-v-2590a5c6="" data-v-58b3eafb="" show="false" title="測試團隊 詳細資訊" size="lg" fullscreen="false" closeonoverlay="true" showheader="true" showclosebutton="true" nopadding="false" closebuttonlabel="關閉"></modal-stub>
<!-- 新增成員 Modal -->
<add-member-modal-stub data-v-58b3eafb="" form="[object Object]" visible="false" loading="false" showpassword="false"></add-member-modal-stub>"
`;

exports[`TeamCard.vue - Snapshot Tests (Before Refactoring) > should match snapshot - card with loading state 1`] = `
"<div data-v-58b3eafb="" class="team-card">
  <!-- 主要卡片內容 -->
  <div data-v-58b3eafb="" class="flex items-center gap-4 flex-1">
    <div data-v-58b3eafb="" class="team-avatar">
      <div data-v-58b3eafb="" class="text-white font-bold text-[1.375rem] uppercase" style="text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);">測</div>
    </div>
    <div data-v-58b3eafb="" class="flex-1 min-w-0">
      <h3 data-v-58b3eafb="" class="m-0 mb-1.5 text-gray-800 text-[1.375rem] font-bold whitespace-nowrap overflow-hidden text-ellipsis">測試團隊</h3>
      <p data-v-58b3eafb="" class="m-0 mb-3 text-gray-500 text-base leading-normal whitespace-nowrap overflow-hidden text-ellipsis">這是一個測試團隊的描述</p>
      <div data-v-58b3eafb="" class="flex items-center gap-3 flex-wrap"><span data-v-58b3eafb="" class="status active">活躍</span><span data-v-58b3eafb="" class="text-gray-500 text-sm font-medium py-1.5 px-3 bg-gray-200 rounded-xl">5 成員 </span></div>
    </div>
  </div><!-- 操作按鈕區 -->
  <div data-v-58b3eafb="" class="flex gap-2 items-center flex-shrink-0 flex-wrap"><button data-v-58b3eafb="" class="btn btn-danger" disabled="">停用</button><button data-v-58b3eafb="" class="btn btn-danger" disabled=""> 刪除團隊 </button></div>
</div>
<!-- 團隊詳情 Modal -->
<modal-stub data-v-2590a5c6="" data-v-58b3eafb="" show="false" title="測試團隊 詳細資訊" size="lg" fullscreen="false" closeonoverlay="true" showheader="true" showclosebutton="true" nopadding="false" closebuttonlabel="關閉"></modal-stub>
<!-- 新增成員 Modal -->
<add-member-modal-stub data-v-58b3eafb="" form="[object Object]" visible="false" loading="false" showpassword="false"></add-member-modal-stub>"
`;

exports[`TeamCard.vue - Snapshot Tests (Before Refactoring) > should match snapshot - inactive team 1`] = `
"<div data-v-58b3eafb="" class="team-card">
  <!-- 主要卡片內容 -->
  <div data-v-58b3eafb="" class="flex items-center gap-4 flex-1">
    <div data-v-58b3eafb="" class="team-avatar">
      <div data-v-58b3eafb="" class="text-white font-bold text-[1.375rem] uppercase" style="text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);">測</div>
    </div>
    <div data-v-58b3eafb="" class="flex-1 min-w-0">
      <h3 data-v-58b3eafb="" class="m-0 mb-1.5 text-gray-800 text-[1.375rem] font-bold whitespace-nowrap overflow-hidden text-ellipsis">測試團隊</h3>
      <p data-v-58b3eafb="" class="m-0 mb-3 text-gray-500 text-base leading-normal whitespace-nowrap overflow-hidden text-ellipsis">這是一個測試團隊的描述</p>
      <div data-v-58b3eafb="" class="flex items-center gap-3 flex-wrap"><span data-v-58b3eafb="" class="status inactive">停用</span><span data-v-58b3eafb="" class="text-gray-500 text-sm font-medium py-1.5 px-3 bg-gray-200 rounded-xl">5 成員 </span></div>
    </div>
  </div><!-- 操作按鈕區 -->
  <div data-v-58b3eafb="" class="flex gap-2 items-center flex-shrink-0 flex-wrap"><button data-v-58b3eafb="" class="btn btn-success">啟用</button><button data-v-58b3eafb="" class="btn btn-danger"> 刪除團隊 </button></div>
</div>
<!-- 團隊詳情 Modal -->
<modal-stub data-v-2590a5c6="" data-v-58b3eafb="" show="false" title="測試團隊 詳細資訊" size="lg" fullscreen="false" closeonoverlay="true" showheader="true" showclosebutton="true" nopadding="false" closebuttonlabel="關閉"></modal-stub>
<!-- 新增成員 Modal -->
<add-member-modal-stub data-v-58b3eafb="" form="[object Object]" visible="false" loading="false" showpassword="false"></add-member-modal-stub>"
`;

exports[`TeamCard.vue - Snapshot Tests (Before Refactoring) > should match snapshot - team with no description 1`] = `
"<div data-v-58b3eafb="" class="team-card">
  <!-- 主要卡片內容 -->
  <div data-v-58b3eafb="" class="flex items-center gap-4 flex-1">
    <div data-v-58b3eafb="" class="team-avatar">
      <div data-v-58b3eafb="" class="text-white font-bold text-[1.375rem] uppercase" style="text-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);">測</div>
    </div>
    <div data-v-58b3eafb="" class="flex-1 min-w-0">
      <h3 data-v-58b3eafb="" class="m-0 mb-1.5 text-gray-800 text-[1.375rem] font-bold whitespace-nowrap overflow-hidden text-ellipsis">測試團隊</h3>
      <p data-v-58b3eafb="" class="m-0 mb-3 text-gray-500 text-base leading-normal whitespace-nowrap overflow-hidden text-ellipsis">無描述</p>
      <div data-v-58b3eafb="" class="flex items-center gap-3 flex-wrap"><span data-v-58b3eafb="" class="status active">活躍</span><span data-v-58b3eafb="" class="text-gray-500 text-sm font-medium py-1.5 px-3 bg-gray-200 rounded-xl">5 成員 </span></div>
    </div>
  </div><!-- 操作按鈕區 -->
  <div data-v-58b3eafb="" class="flex gap-2 items-center flex-shrink-0 flex-wrap"><button data-v-58b3eafb="" class="btn btn-danger">停用</button><button data-v-58b3eafb="" class="btn btn-danger"> 刪除團隊 </button></div>
</div>
<!-- 團隊詳情 Modal -->
<modal-stub data-v-2590a5c6="" data-v-58b3eafb="" show="false" title="測試團隊 詳細資訊" size="lg" fullscreen="false" closeonoverlay="true" showheader="true" showclosebutton="true" nopadding="false" closebuttonlabel="關閉"></modal-stub>
<!-- 新增成員 Modal -->
<add-member-modal-stub data-v-58b3eafb="" form="[object Object]" visible="false" loading="false" showpassword="false"></add-member-modal-stub>"
`;
